--- a/docs/demo_notebooks/ctd_towed_ferry_noaa_pmel.ipynb
+++ b/docs/demo_notebooks/ctd_towed_ferry_noaa_pmel.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "a81a265f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "bf1fa292",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_towed_ferry_noaa_pmel.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_towed_ferry_noaa_pmel\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
+    "An oceanographic monitoring system aboard the Alaska Marine Highway System ferry Tustumena operated for four years in the Alaska Coastal Current (ACC) with funding from the Exxon Valdez Oil Spill Trustee Council's Gulf Ecosystem Monitoring Program, the North Pacific Research Board and the National Oceanic and Atmospheric Administration. An electronic public display aboard the ferry educated passengers about the local oceanography and mapped the ferry's progress. Sampling water at 4 m, the underway system measured: (1) temperature and salinity (used in the present report), and (2) nitrate,\n",
+    "(3) chlorophyll fluorescence, (4) colored dissolved organic matter fluorescence, and (5) optical beam transmittance (not used in report).\n",
     "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
+    "Nominal 4 meter depth.\n",
     "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
+    "NORTH PACIFIC RESEARCH BOARD PROJECT FINAL REPORT\n",
+    "Alaskan Ferry Oceanographic Monitoring in the Gulf of Alaska\n",
+    "NPRB Project 707 Final Report\n",
+    "Edward D. Cokelet and Calvin W. Mordy.\n",
+    "https://www.nodc.noaa.gov/archive/arc0031/0070122/1.1/data/0-data/Final_Report_NPRB_0707.pdf\n",
     "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "Exxon Valdez Oil Spill Gulf Ecosystem\n",
+    "Monitoring and Research Project Final Report\n",
+    "Biophysical Observations Aboard Alaska Marine Highway System Ferries\n",
+    "Gulf Ecosystem Monitoring and Research Project 040699\n",
+    "Final Report\n",
+    "Edward D. Cokelet, Calvin W. Mordy, Antonio J. Jenkins, W. Scott Pegau\n",
+    "https://www.nodc.noaa.gov/archive/arc0031/0070122/1.1/data/0-data/Final_Report_GEM_040699.pdf\n",
+    "\n",
+    "Archive: https://www.ncei.noaa.gov/metadata/geoportal/rest/metadata/item/gov.noaa.nodc%3A0070122/html\n",
+    "\n",
+    "![pic](https://www.nodc.noaa.gov/archive/arc0031/0070122/1.1/about/0070122_map.jpg)\n",
     "\n",
     "\n"
    ]
@@ -45,16 +57,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "e3fe2c37",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_towed_ferry_noaa_pmel\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "acad1cb3",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "3c632d85",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +85,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "18646e93",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +94,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "542756ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "b793f7b4",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "2b4aee61",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +126,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "ba261d84",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +135,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "b6f79a15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "03354a66",
    "metadata": {},
    "outputs": [],
    "source": [
