--- a/docs/demo_notebooks/ctd_transects_cmi_kbnerr.ipynb
+++ b/docs/demo_notebooks/ctd_transects_cmi_kbnerr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "bbd651e5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,29 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "be7a58ab",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_transects_cmi_kbnerr.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_transects_cmi_kbnerr\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "Seasonality of Boundary Conditions for Cook Inlet, Alaska\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
+    "During 2004 to 2006 we collected hydrographic measurements along transect lines crossing: 1) Kennedy Entrance and Stevenson Entrance from Port Chatham to Shuyak Island; 2) Shelikof Strait from Shuyak Island to Cape Douglas; 3) Cook Inlet from Red River to Anchor Point; 4) Kachemak Bay from Barbara Point to Bluff Point, and 5) the Forelands from East Foreland to West Foreland. During the third year we added two additional lines; 6) Cape Douglas to Cape Adams, and 7) Magnet Rock to Mount Augustine. The sampling in 2006 focused on the differences in properties during the spring and neap tide periods.\n",
     "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
+    "CTD profiles 2004-2005 - CMI UAF seems to be transect 5 of this project.\n",
     "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
+    "Part of the project:\n",
+    "Seasonality of Boundary Conditions for Cook Inlet, Alaska\n",
+    "Steve Okkonen Principal Investigator\n",
+    "Co-principal Investigators: Scott Pegau Susan Saupe\n",
+    "Final Report\n",
+    "OCS Study MMS 2009-041\n",
+    "August 2009\n",
+    "Report: https://researchworkspace.com/files/39885971/2009_041.pdf\n",
     "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "<img src=\"https://user-images.githubusercontent.com/3487237/233167915-c0b2b0e1-151e-4cef-a647-e6311345dbf9.jpg\" alt=\"alt text\" width=\"300\"/>\n",
     "\n",
     "\n"
    ]
@@ -45,16 +50,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "eb902bde",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_transects_cmi_kbnerr\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "9d3e52a1",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "362265f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "9eba8695",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "f1e938bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +97,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "b2de800e",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "8ad1cf75",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +119,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "6ec028d1",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +128,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "c1ce49af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +147,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "98e88f21",
    "metadata": {},
    "outputs": [],
    "source": [
