--- a/docs/demo_notebooks/ctd_transects_gwa.ipynb
+++ b/docs/demo_notebooks/ctd_transects_gwa.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "4c53346a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,41 +20,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "eb4879af",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_transects_gwa.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_transects_gwa\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
+    "The Kachemak Bay Research Reserve (KBRR) and NOAA Kasitsna Bay Laboratory jointly work to complete oceanographic monitoring in Kachemak Bay and lower Cook Inlet, in order to provide the physical data needed for comprehensive restoration monitoring in the Exxon Valdez oil spill (EVOS) affected area. This project utilized small boat oceanographic and plankton surveys at existing KBRR water quality monitoring stations to assess spatial, seasonal and inter-annual variability in water mass movement. In addition, this work leveraged information from previous oceanographic surveys in the region, provided environmental information that aided a concurrent Gulf Watch benthic monitoring project, and benefited from a new NOAA ocean circulation model for Cook Inlet.\n",
     "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
+    "Surveys are conducted annually along five primary transects; two in Kachemak Bay and three in lower Cook Inlet, Alaska. Oceanographic data were collected via vertical CTD casts from surface to bottom, zooplankton and phytoplankton tows were made in the upper water column, and seabird and marine mammal observations were performed opportunistically. We also collect meteorological data and water quality measurements in Homer Harbor and Anchor Point year-round at stations as part of our National Estuarine Research Reserve (NERR) System-wide Monitoring program in Seldovia and Homer harbors, and in ice-free months at a mooring near the head of Kachemak Bay.\n",
     "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
-    "\n",
+    "Project files and further description can be found here: https://gulf-of-alaska.portal.aoos.org/#metadata/4e28304c-22a1-4976-8881-7289776e4173/project\n",
+    "    \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "9f386c8c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_transects_gwa\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "02b6f805",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "133ea22d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +68,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "731edf8a",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "e618bd10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +87,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "502383dc",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "05521dba",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "9aa8ef83",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "66d66180",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "13dd5da9",
    "metadata": {},
    "outputs": [],
    "source": [
