--- a/docs/demo_notebooks/ctd_transects_otf_kbnerr.ipynb
+++ b/docs/demo_notebooks/ctd_transects_otf_kbnerr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "aae6d8fa",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "9203cb50",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_transects_otf_kbnerr.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_transects_otf_kbnerr\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "CTD Transect Across Anchor Point, for GEM Project 030670.\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
+    "This project used a vessel of opportunity to collect physical oceanographic and fisheries data at six stations along a transect across lower Cook Inlet from Anchor Point (AP) to the Red River delta each day during July. Logistical support for the field sampling was provided in part by the Alaska Department of Fish and Game which has chartered a drift gillnet vessel annually to fish along this transect providing inseason projections of the size of sockeye salmon runs entering Cook Inlet. This project funded collection of physical oceanographic data on board the chartered vessel to help identify intrusions of the Alaska Coastal Current (ACC) into Cook Inlet and test six hypotheses regarding effects of changing oceanographic conditions on migratory behavior and catchability of sockeye salmon entering Cook Inlet. In 2003-2007, a conductivity-temperature-depth profiler was deployed at each station. In 2003-2005, current velocities were estimated along the transect using a towed acoustic Doppler current profiler, and salmon relative abundance and vertical distribution was estimated using towed fisheries acoustic equipment.\n",
     "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
+    "Willette, T.M., W.S. Pegau, and R.D. DeCino. 2010. Monitoring dynamics of the Alaska coastal current and development of applications for management of Cook Inlet salmon - a pilot study. Exxon Valdez Oil Spill Gulf Ecosystem Monitoring and Research Project Final Report (GEM Project 030670), Alaska Department of Fish and Game, Commercial Fisheries Division, Soldotna, Alaska.\n",
     "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "Report: https://evostc.state.ak.us/media/2176/2004-040670-final.pdf\n",
+    "Project description: https://evostc.state.ak.us/restoration-projects/project-search/monitoring-dynamics-of-the-alaska-coastal-current-and-development-of-applications-for-management-of-cook-inlet-salmon-040670/\n",
     "\n",
     "\n"
    ]
@@ -45,16 +42,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "109885cc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_transects_otf_kbnerr\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "cba223e2",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "676bb4df",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +70,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "96b95f9d",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +79,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "64824587",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "5a9b3ceb",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +98,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "39c6a8db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +111,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "7128259f",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +120,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "6b42b821",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "ed55f7c0",
    "metadata": {},
    "outputs": [],
    "source": [
