--- a/docs/demo_notebooks/ctd_profiles_usgs_boem.ipynb
+++ b/docs/demo_notebooks/ctd_profiles_usgs_boem.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "da216b99",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,18 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "f3097536",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_profiles_usgs_boem.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_profiles_usgs_boem\n",
     "\n",
-    "EcoFOCI Project.\n",
+    "USGS Cook Inlet fish and bird survey CTD profiles.\n",
     "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "CTD profiles collected in Cook Inlet from 2016-2021 by Mayumi Arimitsu as part of BOEM sponsored research on fish and bird distributions in Cook Inlet. The profiles are collected in July for the years 2016-2021.\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
-    "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
-    "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "The scientific project is described here: https://www.usgs.gov/centers/alaska-science-center/science/cook-inlet-seabird-and-forage-fish-study#overview.\n",
     "\n",
     "\n"
    ]
@@ -45,16 +39,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "44c78864",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_profiles_usgs_boem\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "dfec975b",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +57,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "fbf8a0ed",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +67,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "3fbaaf7d",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "f1377fb6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +86,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "2b822342",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "b1700dfb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +108,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "8b37ea9b",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +117,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "bd8fb867",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +136,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "2378cfc0",
    "metadata": {},
    "outputs": [],
    "source": [
