--- a/docs/demo_notebooks/ctd_towed_otf_kbnerr.ipynb
+++ b/docs/demo_notebooks/ctd_towed_otf_kbnerr.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "00f6d5b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "4b1ae54d",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_towed_otf_kbnerr.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_towed_otf_kbnerr\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "Towed CTD Profiles.\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
-    "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
-    "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "Short, high resolution towed CTD in the middle of Cook Inlet at nominal 4 and 10m depths\n",
     "\n",
     "\n"
    ]
@@ -45,16 +37,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "e4d692b7",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_towed_otf_kbnerr\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "7863abb1",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "f0c0d8a0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "9fcda65a",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "e15386d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +84,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "e212c4c1",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "d82df43f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "8889f46e",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "0d943d04",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "bca97a7d",
    "metadata": {},
    "outputs": [],
    "source": [
