--- a/docs/demo_notebooks/ctd_transects_cmi_uaf.ipynb
+++ b/docs/demo_notebooks/ctd_transects_cmi_uaf.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "0086e54f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,25 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "9a799b4a",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/ctd_transects_cmi_uaf.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# ctd_transects_cmi_uaf\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "Seasonality of Boundary Conditions for Cook Inlet, Alaska: Transect (3) at East Foreland Lighthouse.\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
+    "9 CTD profiles at stations across 10 cruises in (approximately) the same locations. Approximately monthly for summer months, 2004 and 2005.\n",
     "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
-    "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "Part of the project:\n",
+    "Seasonality of Boundary Conditions for Cook Inlet, Alaska\n",
+    "Steve Okkonen Principal Investigator\n",
+    "Co-principal Investigators: Scott Pegau Susan Saupe\n",
+    "Final Report\n",
+    "OCS Study MMS 2009-041\n",
+    "August 2009\n",
+    "Report: https://researchworkspace.com/files/39885971/2009_041.pdf\n",
     "\n",
     "\n"
    ]
@@ -45,16 +46,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "5f7038ac",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"ctd_transects_cmi_uaf\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "8647e5ee",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "6b543439",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +74,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "310d6461",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +83,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "223732ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "3e4446bc",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +102,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "2f0d94be",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +115,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "a80e0d72",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "10db7586",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "60180a8a",
    "metadata": {},
    "outputs": [],
    "source": [
