--- a/docs/demo_notebooks/drifters_uaf.ipynb
+++ b/docs/demo_notebooks/drifters_uaf.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "347c5946",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "0c37f3e6",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_uaf.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# drifters_uaf\n",
     "\n",
-    "EcoFOCI Project.\n",
+    "Drifters run by Mark Johnson and others out of UAF with various years and drogue depths.\n",
     "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "* 2003: 7.5m (Cook Inlet)\n",
+    "* 2004: 5m (Cook Inlet)\n",
+    "* 2005: 5m, 80m (Cook Inlet)\n",
+    "* 2006: 5m (Cook Inlet)\n",
+    "* 2012: 1m (Cook Inlet), 15m (Cook Inlet)\n",
+    "* 2013: 1m (Cook Inlet), 15m (Cook Inlet)\n",
+    "* 2014: 1m (Cook Inlet)\n",
+    "* 2019: 1m (Kachemak Bay, Lynn Canal)\n",
+    "* 2020: 1m (Kachemak Bay, Lynn Canal)\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
-    "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
-    "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "Descriptive summary of later drifter deployment: https://www.alaska.edu/epscor/about/newsletters/May-2022-feature-current-events.php, data portal: https://ak-epscor.portal.axds.co/\n",
     "\n",
     "\n"
    ]
@@ -45,16 +47,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "d7289520",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_uaf\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "46be3439",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "8a653125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "2a9f6445",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "5110daaf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "03e9c6a6",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "573a1801",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "b8e06a92",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "94ffa218",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "9b375ca4",
    "metadata": {},
    "outputs": [],
    "source": [
