--- a/docs/demo_notebooks/hfradar.ipynb
+++ b/docs/demo_notebooks/hfradar.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9158effd",
+   "id": "3a7cc4e1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,24 +20,26 @@
   },
   {
    "cell_type": "markdown",
-   "id": "57d7121a",
+   "id": "6a0d4fa1",
    "metadata": {},
    "source": [
-    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/drifters_ecofoci.ipynb/HEAD)\n",
+    "Click here to run this notebook in Binder, a hosted environment: [![Binder](https://mybinder.org/badge_logo.svg)](https://mybinder.org/v2/gh/axiom-data-science/cook-inlet-catalogs/blob/main/docs/demo_notebooks/hfradar.ipynb/HEAD)\n",
     "\n",
-    "# drifters_ecofoci\n",
+    "# hfradar\n",
     "\n",
-    "EcoFOCI Project.\n",
-    "        \n",
-    "As described on the [main project website for EcoFOCI](https://www.ecofoci.noaa.gov/):\n",
+    "HF Radar from UAF.\n",
     "\n",
-    "> We study the ecosystems of the North Pacific Ocean, Bering Sea and U.S. Arctic to improve understanding of ecosystem dynamics and we apply that understanding to the management of living marine resources. EcoFOCI scientists integrate field, laboratory and modeling studies to determine how varying biological and physical factors influence large marine ecosystems within Alaskan waters.\n",
+    "Files are:\n",
+    "* Upper Cook Inlet (System A): 2002-2003 and 2009\n",
+    "* Lower Cook Inlet (System B): 2006-2007\n",
     "\n",
-    "> EcoFOCI is a joint research program between the Alaska Fisheries Science Center (NOAA/ NMFS/ AFSC) and the Pacific Marine Environmental Laboratory (NOAA/ OAR/ PMEL).\n",
+    "Data variables available include tidally filtered and weekly averaged along with tidal constituents calculated from hourly data.\n",
+    "    \n",
+    "Some of the data is written up in reports:\n",
+    "* https://espis.boem.gov/final%20reports/5009.pdf\n",
+    "* https://www.govinfo.gov/app/details/GOVPUB-I-47b721482d69e308aec1cca9b3e51955\n",
     "\n",
-    "Drifter data are being pulled from this webpage: https://www.ecofoci.noaa.gov/drifters/efoci_drifterData.shtml which also has a plot available for each drifter dataset.\n",
-    "\n",
-    "Several years of EcoFOCI drifter data are also available in a private Research Workspace project: https://researchworkspace.com/project/41531085/files.\n",
+    "![pic](https://researchworkspace.com/files/40338104/UAcoverage.gif)\n",
     "\n",
     "\n"
    ]
@@ -45,16 +47,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "00ee5b93",
+   "id": "deff3843",
    "metadata": {},
    "outputs": [],
    "source": [
-    "cat = intake.open_catalog(cic.utils.cat_path(\"drifters_ecofoci\"))"
+    "cat = intake.open_catalog(cic.utils.cat_path(\"hfradar\"))"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b8bcd36",
+   "id": "3b7ebbfd",
    "metadata": {},
    "source": [
     "## Plot all datasets in catalog\n"
@@ -63,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1d52fadd",
+   "id": "a539cd46",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bc62737d",
+   "id": "4cb11481",
    "metadata": {},
    "source": [
     "## List available datasets in the catalog\n"
@@ -82,7 +84,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e65fab26",
+   "id": "96fcc33d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +94,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff113c63",
+   "id": "e64411a4",
    "metadata": {},
    "source": [
     "## Select one dataset to investigate\n"
@@ -101,7 +103,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4404a01e",
+   "id": "a3f66c47",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "247ffebf",
+   "id": "6b0440b2",
    "metadata": {},
    "source": [
     "## Plot one dataset\n"
@@ -123,7 +125,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25d33a11",
+   "id": "f593a3ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +144,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3b1bc4c",
+   "id": "5fab9482",
    "metadata": {},
    "outputs": [],
    "source": [
